crates/apollo-compiler/test_data/diagnostics/0100_union_extensions.txt
Error: union member `ThisIsAScalar` must be an object type
   ╭─[0100_union_extensions.graphql:8:30]
   │
 8 │ extend union NonObjectType = ThisIsAScalar
   │                              ──────┬──────  
   │                                    ╰──────── this is a scalar
   │ 
   │ Help: Union members must be object types.
───╯
Error: duplicate definitions for the `WithFieldA` member of union type `DuplicateMembers`
    ╭─[0100_union_extensions.graphql:12:33]
    │
 11 │ union DuplicateMembers = WithFieldA
    │                          ─────┬────  
    │                               ╰────── previous definition of `WithFieldA` here
 12 │ extend union DuplicateMembers = WithFieldA | WithFieldB
    │                                 ─────┬────  
    │                                      ╰────── `WithFieldA` redefined here
────╯
Error: non-repeatable directive nonRepeatable can only be used once per location
    ╭─[0100_union_extensions.graphql:17:33]
    │
 16 │ union DuplicateDirective @nonRepeatable = WithFieldA
    │                          ───────┬──────  
    │                                 ╰──────── directive `@nonRepeatable` first called here
 17 │ extend union DuplicateDirective @nonRepeatable = WithFieldB
    │                                 ───────┬──────  
    │                                        ╰──────── directive `@nonRepeatable` called again here
────╯

